add all new changes

--- a/index.html
+++ b/index.html
@@ -1,66 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./icons8-expedia-100.png" type="image/x-icon">
-  <title>Travel Showcase | Explore the World</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  <!-- Hero Section -->
-  <header class="hero">
-    <div class="overlay">
-      <h1>Explore the World</h1>
-      <p>Find Your Next Great Adventure</p>
-    </div>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="./icons8-expedia-100.png"
+      type="image/x-icon"
+    />
+    <title>Travel Showcase | Explore the World</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <!-- Hero Section -->
+    <header class="hero">
+      <div class="overlay">
+        <h1>Explore the World</h1>
+        <p>Find Your Next Great Adventure</p>
+      </div>
+    </header>
 
-  <!-- Destinations Section -->
-  <section class="destinations">
-    <h2>Top Destinations</h2>
-    <div class="card-container">
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" alt="Maldives">
-        <div class="card-content">
-          <h3>Maldives</h3>
-          <p>Experience white sands, turquoise waters, and luxury resorts.</p>
+    <!-- Destinations Section -->
+    <section class="destinations">
+      <h2>Top Destinations</h2>
+      <div class="card-container">
+        <div class="card">
+          <img
+            src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e"
+            alt="Maldives"
+          />
+          <div class="card-content">
+            <h3>Maldives</h3>
+            <p>Experience white sands, turquoise waters, and luxury resorts.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img
+            src="https://hopa.am/uploads/images/blog/565537_eiffel-tower-paris-france-EIFFEL0217.jpg"
+            alt="Paris"
+          />
+          <div class="card-content">
+            <h3>Paris, France</h3>
+            <p>
+              Romantic streets, world-class art, and iconic landmarks await.
+            </p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img
+            src="https://images.unsplash.com/photo-1526772662000-3f88f10405ff"
+            alt="Tokyo"
+          />
+          <div class="card-content">
+            <h3>Tokyo, Japan</h3>
+            <p>Where tradition meets technology in the heart of Asia.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img
+            src="https://images.unsplash.com/photo-1505761671935-60b3a7427bad"
+            alt="New York"
+          />
+          <div class="card-content">
+            <h3>New York, USA</h3>
+            <p>The city that never sleeps — full of energy and opportunity.</p>
+          </div>
         </div>
       </div>
 
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1491553895911-0055eca6402d" alt="Paris">
-        <div class="card-content">
-          <h3>Paris, France</h3>
-          <p>Romantic streets, world-class art, and iconic landmarks await.</p>
+          <img
+            src="https://www.spotblue.com/app/uploads/2023/08/why-is-Dubai-famous-for-tourism-1.jpg"
+            alt="Dubai"
+          />
+          <div class="card-content">
+            <h3>Emirates, Dubai</h3>
+            <p>A modern metropolis with iconic landmarks, vibrant neighbourhoods, world-class shopping and rich cultural experiences.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1526772662000-3f88f10405ff" alt="Tokyo">
-        <div class="card-content">
-          <h3>Tokyo, Japan</h3>
-          <p>Where tradition meets technology in the heart of Asia.</p>
+        <div class="card">
+          <img
+            src="https://encrypted-tbn0.gstatic.com/licensed-image?q=tbn:ANd9GcTU5ShQhNCwOIBAEOyyOojTSVkbwdRcjJ_wZ8OuEQ4qkEO-5FacEbCTgrrBmFUAkSZI3ShCXRnVZBc6fijLpz_lGCk&s=19"
+            alt="Australia"
+          />
+          <div class="card-content">
+            <h3>Great Barrier Reef, Australia</h3>
+            <p>The Great Barrier Reef is the world's largest coral reef system, composed of over 2,900 individual reefs and 900 islands stretching for over 2,300 kilometres over an area of approximately 344,400 square kilometres.</p>
+          </div>
         </div>
-      </div>
+    </section>
 
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1505761671935-60b3a7427bad" alt="New York">
-        <div class="card-content">
-          <h3>New York, USA</h3>
-          <p>The city that never sleeps — full of energy and opportunity.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Travel Showcase | Follow us on 
-      <a href="#">Instagram</a> • 
-      <a href="#">Twitter</a> • 
-      <a href="#">Facebook</a>
-    </p>
-  </footer>
-</body>
+    <!-- Footer -->
+    <footer>
+      <p>
+        &copy; 2025 Travel Showcase | Follow us on <a href="#">Instagram</a> •
+        <a href="#">Twitter</a> •
+        <a href="#">Facebook</a>
+      </p>
+    </footer>
+  </body>
 </html>
