--- a/index.html
+++ b/index.html
@@ -69,16 +69,18 @@
             <p>The city that never sleeps — full of energy and opportunity.</p>
           </div>
         </div>
-      </div>
 
-      <div class="card">
+        <div class="card">
           <img
             src="https://www.spotblue.com/app/uploads/2023/08/why-is-Dubai-famous-for-tourism-1.jpg"
             alt="Dubai"
           />
           <div class="card-content">
             <h3>Emirates, Dubai</h3>
-            <p>A modern metropolis with iconic landmarks, vibrant neighbourhoods, world-class shopping and rich cultural experiences.</p>
+            <p>
+              A modern metropolis with iconic landmarks, vibrant neighbourhoods,
+              world-class shopping and rich cultural experiences.
+            </p>
           </div>
         </div>
 
@@ -89,9 +91,18 @@
           />
           <div class="card-content">
             <h3>Great Barrier Reef, Australia</h3>
-            <p>The Great Barrier Reef is the world's largest coral reef system, composed of over 2,900 individual reefs and 900 islands stretching for over 2,300 kilometres over an area of approximately 344,400 square kilometres.</p>
+            <p>
+              The Great Barrier Reef is the world's largest coral reef system,
+              composed of over 2,900 individual reefs and 900 islands stretching
+              for over 2,300 kilometres over an area of approximately 344,400
+              square kilometres.
+            </p>
           </div>
         </div>
+
+        
+
+      </div>
     </section>
 
     <!-- Footer -->
